--- a/locale/es.po
+++ b/locale/es.po
@@ -1,6 +1,14 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
+
+msgctxt "error:account.invoice:"
+msgid ""
+"You can not set to draft invoice \"%(invoice)s\" because period "
+"\"%(period)s\" is closed."
+msgstr ""
+"No se puede pasar a borrador la factura \"%(invoice)s\" porqué el periodo "
+"\"%(period)s\" esta cerrado."
 
 msgctxt "error:account.invoice:"
 msgid "You cannot cancel an invoice with number."
