--- a/locale/ca.po
+++ b/locale/ca.po
@@ -2,14 +2,12 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:account.invoice:"
+msgctxt "model:ir.message,text:cancel_invoice_with_number"
+msgid "You cannot cancel an invoice with number"
+msgstr ""
+
+msgctxt "model:ir.message,text:draft_closed_period"
 msgid ""
 "You can not set to draft invoice \"%(invoice)s\" because period "
 "\"%(period)s\" is closed."
 msgstr ""
-"No es pot passar a esborrany la factura \"%(invoice)s\" perquè el període "
-"\"%(period)s\" està tancat."
-
-msgctxt "error:account.invoice:"
-msgid "You cannot cancel an invoice with number."
-msgstr "No podeu cancel·lar una factura amb número assignat."
