Add control to cancel an invoice that closed journal and period #041331

--- a/locale/es.po
+++ b/locale/es.po
@@ -2,12 +2,22 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "model:ir.message,text:cancel_invoice_with_number"
+msgctxt "model:ir.message,text:msg_cancel_invoice_with_number"
 msgid "You cannot cancel an invoice with number"
-msgstr ""
+msgstr "No puede cancelar una factura con un número asignado."
 
-msgctxt "model:ir.message,text:draft_closed_period"
+msgctxt "model:ir.message,text:msg_draft_closed_period"
 msgid ""
 "You can not set to draft invoice \"%(invoice)s\" because period "
 "\"%(period)s\" is closed."
 msgstr ""
+"No se puede pasar a borrador la factura \"%(invoice)s\" porqué el período "
+"\"%(period)s\" está cerrado."
+
+msgctxt "model:ir.message,text:msg_modify_closed_journal_period"
+msgid ""
+"You can not set to draft invoice \"%(invoice)s\" on closed journal-period "
+"\"%(journal_period)s\"."
+msgstr ""
+"No se puede pasar a borrador la factura \"%(invoice)s\" porqué el diario-"
+"período \"%(journal_period)s\" está cerrado."
