--- a/locale/ca.po
+++ b/locale/ca.po
@@ -2,12 +2,22 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "model:ir.message,text:cancel_invoice_with_number"
+msgctxt "model:ir.message,text:msg_cancel_invoice_with_number"
 msgid "You cannot cancel an invoice with number"
-msgstr ""
+msgstr "No podeu cancel·lar una factura amb un número assignat."
 
-msgctxt "model:ir.message,text:draft_closed_period"
+msgctxt "model:ir.message,text:msg_draft_closed_period"
 msgid ""
 "You can not set to draft invoice \"%(invoice)s\" because period "
 "\"%(period)s\" is closed."
 msgstr ""
+"No es pot passar a esborrany la factura \"%(invoice)s\" perquè el període "
+"\"%(period)s\" està tancat."
+
+msgctxt "model:ir.message,text:msg_modify_closed_journal_period"
+msgid ""
+"You can not set to draft invoice \"%(invoice)s\" on closed journal-period "
+"\"%(journal_period)s\"."
+msgstr ""
+"No es pot passar a esborrany la factura \"%(invoice)s\" perquè el diari-"
+"període \"%(journal_period)s\". està tancat."
