* Change the way that the invoices are setted to draft. With the possibilty to enter a new law that not allow to remove any account move, the invoice is setted to draft creating a compesantion move and associateting it to the invoice throwe the additiona_move field.
Task: #047268

* Fix some bugs and improve code reducing lines.

Task: #047268

* Remove commented line not needed.

Tasks: #047268

* Remove Warning definition not used.

Tasks: #047268

* Fix some text.

Task: 047268

---------

Co-authored-by: Bernat Brunet <bernat@nan-tic.com>

--- a/locale/ca.po
+++ b/locale/ca.po
@@ -2,22 +2,26 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "model:ir.message,text:msg_cancel_invoice_with_number"
-msgid "You cannot cancel invoice \"%(invoice)s\" because it already has a number."
-msgstr "No podeu cancel·lar la factura \"%(invoice)s\" amb un número assignat."
+msgctxt "field:account.invoice,allow_draft:"
+msgid "Allow Draft Invoice"
+msgstr "Permet factura esborrany"
 
 msgctxt "model:ir.message,text:msg_draft_closed_period"
 msgid ""
-"You can not set to draft invoice \"%(invoice)s\" because period "
-"\"%(period)s\" is closed."
+"You cannot create an account compesantion move in the period %(period)s "
+"because is closed."
 msgstr ""
-"No es pot passar a esborrany la factura \"%(invoice)s\" perquè el període "
-"\"%(period)s\" està tancat."
+"No podeu crear un assentamet de compensació en el període %(period)s perquè "
+"està tancat."
 
-msgctxt "model:ir.message,text:msg_modify_closed_journal_period"
+msgctxt "model:ir.message,text:msg_invoice_in_payment"
 msgid ""
-"You can not set to draft invoice \"%(invoice)s\" on closed journal-period "
-"\"%(journal_period)s\"."
+"The invoice %(invoice)s could not be possible to draft, becasue it have one "
+"or more move lines in payments [IDs: %(payments)s]. This means that is "
+"possible that this payment will be in a payment group and this group upload "
+"on a Bank."
 msgstr ""
-"No es pot passar a esborrany la factura \"%(invoice)s\" perquè el diari-"
-"període \"%(journal_period)s\". està tancat."
+"La factura %(invoice)s no es pot passar a esborrany, perquè té un o més "
+"apunts relacionats a pagaments [ID: %(payments)s]. Això vol dir que és "
+"possible que aquest pagament estigui en una remesa bancària i aquesta estigui "
+"pujada ja al Banc."
