--- a/locale/es.po
+++ b/locale/es.po
@@ -2,22 +2,26 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "model:ir.message,text:msg_cancel_invoice_with_number"
-msgid "You cannot cancel invoice \"%(invoice)s\" because it already has a number."
-msgstr "No puede cancelar la factura \"%(invoice)s\" con un número asignado."
+msgctxt "field:account.invoice,allow_draft:"
+msgid "Allow Draft Invoice"
+msgstr "Permitir factura borrador"
 
 msgctxt "model:ir.message,text:msg_draft_closed_period"
 msgid ""
-"You can not set to draft invoice \"%(invoice)s\" because period "
-"\"%(period)s\" is closed."
+"You cannot create an account compesantion move in the period %(period)s "
+"because is closed."
 msgstr ""
-"No se puede pasar a borrador la factura \"%(invoice)s\" porqué el período "
-"\"%(period)s\" está cerrado."
+"No puedes crear un asiento de compensación en el periodo %(period)s porque "
+"está cerrado."
 
-msgctxt "model:ir.message,text:msg_modify_closed_journal_period"
+msgctxt "model:ir.message,text:msg_invoice_in_payment"
 msgid ""
-"You can not set to draft invoice \"%(invoice)s\" on closed journal-period "
-"\"%(journal_period)s\"."
+"The invoice %(invoice)s could not be possible to draft, becasue it have one "
+"or more move lines in payments [IDs: %(payments)s]. This means that is "
+"possible that this payment will be in a payment group and this group upload "
+"on a Bank."
 msgstr ""
-"No se puede pasar a borrador la factura \"%(invoice)s\" porqué el diario-"
-"período \"%(journal_period)s\" está cerrado."
+"La factura %(invoice)s no se puede pasar a borrador, porque tiene uno o más "
+"apuntes relacionados a pagos [ID: %(payments)s]. Esto quiere decir que és "
+"posible que estos pagos esten ya en una remesa bancárea y ésta esté subida "
+"al Banco."
